Ready to deploy...

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "outDir": "./dist",
     "sourceMap": true,
     "noImplicitAny": true,
-    "typeRoots": ["./node_modules/@types", "types"]
+    "typeRoots": ["./node_modules/@types", "types"],
+    "ignoreDeprecations": "6.0"
   },
   "include": ["src/**/*", "types"]
 }
