--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,13 +1,14 @@
 {
   "compilerOptions": {
+    "target": "ES2020",
     "module": "NodeNext",
     "moduleResolution": "NodeNext",
+    "rootDir": "src",
+    "outDir": "dist",
     "baseUrl": "src",
-    "outDir": "./dist",
     "sourceMap": true,
     "noImplicitAny": true,
-    "typeRoots": ["./node_modules/@types", "types"],
-    "ignoreDeprecations": "6.0"
+    "typeRoots": ["./node_modules/@types", "types"]
   },
   "include": ["src/**/*", "types"]
 }
